# sts2-stats

./: .gitattributes  .gitignore  LICENSE  README.md  SPEC.md  app.py  card_name_overrides.json  card_reworks.json  dashboard_common.py  import_all.py  pyproject.toml  theme.py  verify.py
.claude/: settings.json
.streamlit/: config.toml
sts2_stats/: db.py  importer.py  names.py  parser.py  paths.py  potions.py  queries.py  rankings.py  relics.py  reworks.py
views/: card_detail.py  card_rankings.py  character_detail.py  overview.py  potions.py  relics.py
